--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -199,7 +199,7 @@
   <!-- Card -->
   <template class="card-template">
 
-    <article class="card">
+    <a href="" target='_bank' class="card">
       <div class="card__image card__image_type_1"></div>
       <div class="card__wrapper">
         <p class="card__text-date"></p>
@@ -207,7 +207,7 @@
         <p class="card__text"></p>
         <p class="card__text-edit"></p>
       </div>
-    </article>
+    </a>
 
   </template>
   <script src="<%= htmlWebpackPlugin.files.js %>"></script>
